# microservicespp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
BINDINGS_PACKAGE/: README.md
CORE_PACKAGE/: CMakeLists.txt
CORE_PACKAGE/include/core/: dynamicLoader.hpp  exceptions.hpp  microservicespp.hpp
CORE_PACKAGE/tests/: dynamicLoaderTest.cpp
CORE_PACKAGE/tests/dynamicLoader/: CMakeLists.txt  dynamicLoaderTest.cpp  loadableClass.cpp  loadableClass.hpp
TOOLS_PACKAGE/: README.md
